Add: render function & cache example

--- a/.gitignore
+++ b/.gitignore
@@ -24,10 +24,12 @@ coverage
 build/Release
 
 # Dependency directory
-node_modules
+node_modules/
 
 # Optional npm cache directory
 .npm
 
 # Optional REPL history
 .node_repl_history
+
+.idea/
