--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "node-generic-server-render",
+  "name": "generic-server-render",
   "version": "0.0.1",
   "description": "Render output html at an url, from a file or form an html string.",
   "main": "index.js",
