--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "generic-server-render",
   "version": "0.0.2",
-  "description": "Render output html at an url, from a file or form an html string.",
+  "description": "Render output html at an url, from a file or from an html string.",
   "main": "index.js",
   "scripts": {
     "test": "node test.js"
@@ -27,7 +27,7 @@
   },
   "homepage": "https://github.com/stefangab95/node-generic-server-render#readme",
   "dependencies": {
-    "nightmare": "^2.2.0"
+    "nightmare": "^2.8.1"
   },
   "devDependencies": {
     "async": "^2.0.0-rc.2"
