--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "generic-server-render",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "Render output html at an url",
   "main": "index.js",
   "scripts": {
@@ -25,7 +25,7 @@
   },
   "homepage": "https://github.com/stefangab95/node-generic-server-render#readme",
   "dependencies": {
-    "async": "^2.1.4",
+    "async.queue": "^0.5.2",
     "nightmare": "^2.9.1",
     "nightmare-load-filter": "^0.2.0"
   },
